WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200081
[GStreamer] Don't crash with empty video src
https://bugs.webkit.org/show_bug.cgi?id=200081
Summary
[GStreamer] Don't crash with empty video src
Alicia Boya García
Reported
2019-07-24 09:24:55 PDT
When a <video> element is set to load empty or about:blank, a player is still created, but no pipeline is loaded. This patch fixes some assertion errors that manifested in that case.
Attachments
Patch
(4.82 KB, patch)
2019-07-24 09:33 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
Patch
(4.83 KB, patch)
2019-07-24 09:49 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2019-07-24 12:37 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2019-07-24 09:33:35 PDT
Created
attachment 374781
[details]
Patch
Alicia Boya García
Comment 2
2019-07-24 09:49:06 PDT
Created
attachment 374783
[details]
Patch
Alicia Boya García
Comment 3
2019-07-24 09:52:31 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/18051
WebKit Commit Bot
Comment 4
2019-07-24 10:34:29 PDT
Comment on
attachment 374783
[details]
Patch Clearing flags on attachment: 374783 Committed
r247778
: <
https://trac.webkit.org/changeset/247778
>
WebKit Commit Bot
Comment 5
2019-07-24 10:34:30 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 6
2019-07-24 11:44:34 PDT
It looks like there is no expected file for imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/video_crash_empty_src.html which was added in
https://trac.webkit.org/changeset/247778/webkit
This is causing a missing result in history:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fthe-video-element%2Fvideo_crash_empty_src.html
Can the missing file be added soon?
Michael Catanzaro
Comment 7
2019-07-24 12:03:38 PDT
Reopening.
Alicia Boya García
Comment 8
2019-07-24 12:37:07 PDT
Created
attachment 374794
[details]
Patch
WebKit Commit Bot
Comment 9
2019-07-24 13:31:13 PDT
Comment on
attachment 374794
[details]
Patch Clearing flags on attachment: 374794 Committed
r247788
: <
https://trac.webkit.org/changeset/247788
>
WebKit Commit Bot
Comment 10
2019-07-24 13:31:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug